# djmvc

./: .gitignore  CLAUDE.md  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tox.ini  vitest.config.js
.github/workflows/: ci.yml  docs.yml  install-test.yml  release.yml
docs/: Makefile  conf.py  contributing.rst  demo.rst  index.rst  install.rst  philosophy.rst  requirements.txt
docs/reference/: clonable.rst  controller.rst  index.rst  model.rst  registry.rst  route.rst  site.rst  templatetags.rst  view.rst  views.rst
docs/reference/djmvc_api/: index.rst
docs/reference/djmvc_auth/: index.rst
docs/reference/djmvc_dal/: index.rst
docs/reference/djmvc_dal_topbar/: index.rst
docs/reference/djmvc_debug/: index.rst
docs/reference/djmvc_history/: index.rst
docs/reference/mixins/: action.rst  delete.rst  filter.rst  form.rst  index.rst  list.rst  list_action.rst  log.rst  modelform.rst  object.rst  object_modelform.rst  objectform.rst  pagination.rst  tables2.rst  template.rst  template_view.rst
docs/reference/views/: create.rst  delete.rst  detail.rst  form.rst  index.rst  list.rst  list_action.rst  template.rst  update.rst
docs/tutorial/: index.rst  stage0.rst  stage1.rst  stage2.rst  stage3.rst  stage4.rst  stage5.rst
src/djmvc/: __init__.py  apps.py  clonable.py  controller.py  errors.py  handlers.py  introspection.py  model.py  redirect.py  registry.py  route.py  settings.py  view.py
src/djmvc/locale/en/LC_MESSAGES/: django.po
src/djmvc/locale/fr/LC_MESSAGES/: django.po
src/djmvc/management/commands/: show_urls.py
src/djmvc/templatetags/: djmvc.py  eval.py
src/djmvc/views/: action.py  create.py  delete.py  detail.py  filter.py  form.py  generic.py  json.py  list.py  list_action.py  log.py  modelform.py  object.py  objectform.py  pagination.py  search.py  swagger.py  tables2.py  template.py  update.py
src/djmvc_api/: apps.py  djmvc.py  middleware.py  models.py  views.py
src/djmvc_api/migrations/: 0001_initial.py  0002_rename_from_djmvc_swagger.py
src/djmvc_api/templates/djmvc_api/: api.html
src/djmvc_auth/: apps.py  controller.py  djmvc.py  views.py
src/djmvc_auth/locale/en/LC_MESSAGES/: django.po
src/djmvc_auth/locale/fr/LC_MESSAGES/: django.po
src/djmvc_bulma/: apps.py
src/djmvc_bulma/locale/en/LC_MESSAGES/: django.po
src/djmvc_bulma/locale/fr/LC_MESSAGES/: django.po
src/djmvc_bulma/static/djmvc_bulma/css/: style.css
src/djmvc_bulma/static/djmvc_bulma/js/: filter-sidebar.js  filter-sidebar.test.js  form-focus.js  form-focus.test.js  hamburger.js  hamburger.test.js  list-action-bar.js  list-action-bar.test.js  nav-config.js  nav-config.test.js  toast.js  toast.test.js
src/djmvc_bulma/templates/djmvc/: 403.html  _actions_column.html  _checkbox_column.html  _checkbox_header.html  _deletion_preview.html  _error.html  _filter.html  _flashes.html  _horizontal_form.html  _object_list.html  _pagination.html  _tables2.html  base.html  detail.html  detaillist.html  error.html  form.html  form_delete.html  home.html  list.html
src/djmvc_dal/: apps.py  hooks.py  lookup.py  models.py  views.py
src/djmvc_dal_topbar/: apps.py  djmvc.py  lookup.py  views.py
src/djmvc_dal_topbar/static/djmvc_dal_topbar/css/: site-search.css
src/djmvc_dal_topbar/static/djmvc_dal_topbar/js/: site-search.js
src/djmvc_dal_topbar/templates/djmvc/: _site_search.html
src/djmvc_debug/: apps.py  djmvc.py  models.py  routing_debug.py  views.py
src/djmvc_example/: asgi.py  example_urls.py  settings.py  urls.py  wsgi.py
src/djmvc_example/migrations/: 0001_initial.py  0002_test_users.py
src/djmvc_example/stage0/: apps.py  djmvc.py  models.py  views.py
src/djmvc_example/stage0/migrations/: 0001_initial.py  0002_stage0tag.py  0003_initial.py
src/djmvc_example/stage1/: apps.py  djmvc.py  models.py
src/djmvc_example/stage1/migrations/: 0001_initial.py
src/djmvc_example/stage2/: apps.py  djmvc.py
src/djmvc_example/stage3/: apps.py  djmvc.py  models.py
src/djmvc_example/stage3/migrations/: 0001_initial.py
src/djmvc_example/stage4/: apps.py  djmvc.py  models.py
src/djmvc_example/stage4/migrations/: 0001_initial.py
src/djmvc_history/: apps.py  djmvc.py  log.py  models.py  views.py
tests/: alight_helpers.py  conftest.py  dal_screenshots.py  doc_screenshots.py  test_api.py  test_auth.py  test_breadcrumbs.py  test_controller.py  test_djmvc_dal.py  test_djmvc_dal_splinter.py  test_djmvc_dal_topbar.py  test_djmvc_dal_topbar_splinter.py  test_djmvc_tags.py  test_docs_screenshots.py  test_errors.py  test_eval.py  test_filter.py  test_form_focus.py  test_hamburger.py  test_i18n.py  test_list_action.py  test_list_combinations.py  test_logentry.py  test_messages.py  test_messages_browser.py  test_nav_active.py  test_pagination.py  test_permissions.py  test_queryset.py  test_registry.py  test_routing.py  test_routing_debug.py  test_stage0.py  test_stage1.py  test_stage2.py  test_stage3.py  test_stage4.py  test_tokens.py  test_tutorial_docs.py  test_view.py  (+1 more)
tests/views/: test_template.py
